[package]
name = "recipes"
version = "0.1.10"
edition = "2021"

[dependencies]
tera = "1.20.0"
serde_json = "1.0"
comrak = "0.32.0"

actix-web = "4.8.0"
actix-files = "0.6.6"
actix-identity = "0.8.0"
actix-session = { version = "0.10.0", features = ["cookie-session"] }

bcrypt = "0.16.0"

tokio = { version = "1.39.1", features = ["fs", "sync"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-actix-web = "0.7.11"

clap = { version = "4.5.10", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }

unicode-normalization = "0.1.23"

notify = { version = "7.0.0", default-features = false, features = ["macos_kqueue"] }

[dev-dependencies]
tempfile = "3.10.1"
tokio = { version = "1.39.1", features = ["rt", "macros"] }
