[package]
name = "recipes"
version = "0.1.24"
edition = "2024"

[dependencies]
tera = "1.20.0"
serde_json = "1.0"
comrak = "0.43.0"

actix-web = "4.8.0"
actix-files = "0.6.6"
actix-identity = "0.9.0"
actix-session = { version = "0.11.0", features = ["cookie-session"] }

bcrypt = "0.17.0"

tokio = { version = "1.39.1", features = ["fs", "sync"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-actix-web = "0.7.11"

serde = { version = "1.0.204", features = ["derive"] }

unicode-normalization = "0.1.23"

notify = { version = "8.0.0", default-features = false, features = ["macos_kqueue"] }

config = "0.15.8"

[dev-dependencies]
tempfile = "3.10.1"
tokio = { version = "1.39.1", features = ["rt", "macros"] }
